[package]
name = "klucznik"
repository = "https://github.com/konradmalik/klucznik"
license = "GPL-3.0"
edition = "2021"
exclude = ["/flake.nix", "./flake.lock", "/.github", "/.gitignore"]
authors = [ "Konrad Malik <https://github.com/konradmalik>" ]
description = "Manage your ssh access keys automatically."
readme = "README.md"
version = "0.1.0"

[dependencies]
anyhow = "1.0.66"
clap = {"version" = "4.0.27", features = ["derive"]}
ureq = "2.5.0"
url = "2.3.1"

[dev-dependencies]
tempfile = "3.3.0"

